syntax = "proto3";

package user;

option go_package = "/userpb";

service UserService {
  rpc UserExists (UsernameRequest) returns (UserExistsResponse);
  rpc AddUser (NewUserRequest) returns (UserIDResponse);
  rpc CheckCredentials (CredentialsRequest) returns (CredentialsResponse);
}

message UsernameRequest {
  string username = 1;
}

message UserExistsResponse {
  bool exists = 1;
}

message NewUserRequest {
  string username = 1;
  string password = 2;
}

message UserIDResponse {
  string id = 1;
}

message CredentialsRequest {
  string username = 1;
  string password = 2;
}

message CredentialsResponse {
  string id = 1;
}